@@ -23,6 +23,15 @@ CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
 			                     AND `ob`.`concept_id` = 9459
                            AND `ob`.`voided` = 0);
 
+-- retrieving district using hsa
+CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
+  VIEW `hsa_district` AS
+  SELECT `e`.`encounter_id`, `e`.`patient_id`, `hsa`.`hsa_id`, `hsa`.`district_id`, `hsa`.`village_id`, `vg`.`name` 
+    FROM `encounter` `e`
+      INNER JOIN `hsa_villages` `hsa` ON `hsa`.`hsa_id` = `e`.`provider_id` AND `e`.`voided` = 0
+      INNER JOIN `village` `vg` ON `vg`.`village_id` = `hsa`.`village_id`
+    WHERE  `e`.`encounter_type` = 111;                           
+
 -- retrieving the max patient's EDD
 CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
   VIEW `max_edd` AS
@@ -44,15 +53,19 @@ CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
     `pn`.`family_name_prefix`,
     `pa`.`city_village`,
     `pa`.`county_district`,
+    `e`.`encounter_id`,
     `o`.`concept_id`,
     `edd`.`value_text` AS `edd`,
     floor((280 - DATEDIFF(DATE(`edd`.`value_text`), CURDATE())) / 7) as `gestation_age`,
     DATEDIFF(CURDATE(),`pp`.`date_enrolled`) as `number_of_days_after_reg`,
     `pp`.`date_enrolled`,
     `nvd`.`value_text` as `next_visit_date`,
-    `cl`.`district`,
+    IFNULL(`cl`.`district`,`hsa`.`district_id`) AS `district`,
     `pp`.`voided`,
-    `e`.`encounter_type`
+    `e`.`encounter_type`,
+    `hsa`.`hsa_id`, 
+    `hsa`.`district_id` AS `textIT_district`
+    
    FROM
     `encounter` `e`
         INNER JOIN
@@ -65,14 +78,16 @@ CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
     `patient_program` `pp` ON `pp`.`patient_id` = `e`.`patient_id` and `pp`.`voided` = 0
         INNER JOIN
     `obs` `o` ON `o`.`encounter_id` = `e`.`encounter_id` and `e`.`voided` = 0
-        INNER JOIN
+        LEFT JOIN
     `obs` `obs_call` ON `o`.`encounter_id` = `obs_call`.`encounter_id`
         AND `obs_call`.`concept_id` = 8304 and `obs_call`.`voided` = 0
-        INNER JOIN
+        LEFT JOIN
     `call_log` `cl` ON `obs_call`.`value_text` = `cl`.`call_log_id`
     INNER JOIN `max_edd` `edd` ON `edd`.`person_id` = `e`.`patient_id`
         LEFT JOIN
     `max_next_visit_date` `nvd` ON `nvd`.`person_id` = `e`.`patient_id`
+       LEFT JOIN `hsa_district` `hsa` ON `hsa`.`hsa_id` = `e`.`provider_id` AND `pa`.`city_village` = `hsa`.`name`
+       
   WHERE `o`.`concept_id` = 6188;
     
 --
