@@ -67,3 +67,7 @@ Version 3 beta
 2014-12-16
   PB - added rdoc and rcov gems to Gemfile
   PB - added rdoc and rcov gems to gem cache
+2014-12-17
+  DN - Added a view to get hsa_districts in hotline_schema_additions script
+  DN - Updated the birth plan and delivery queries in followup model
+
